--- a/style.css
+++ b/style.css
@@ -8,3 +8,10 @@
   width: 90% !important;
   border: #f4f4f4 3px solid !important;
 }
+.section-follow .fa-4x {
+  margin: 5px 10px;
+}
+
+.section-contact h5 {
+  margin-bottom: 30px;
+}
